--- a/fashion-mnist-aml-basic/src/experiment.ipynb
+++ b/fashion-mnist-aml-basic/src/experiment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "Transform: ToTensor()"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,15 +81,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 153.48it/s]\n"
+      "100%|██████████| 750/750 [00:05<00:00, 126.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.010646, train accuracy:76.2%\n",
-      "Validation loss: 0.008057, validation accuracy:82.1%\n",
+      "Train loss: 0.010931, train accuracy:75.3%\n",
+      "Validation loss: 0.008346, validation accuracy:81.0%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -100,15 +100,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 165.17it/s]\n"
+      "100%|██████████| 750/750 [00:06<00:00, 109.59it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007539, train accuracy:82.9%\n",
-      "Validation loss: 0.008454, validation accuracy:80.2%\n",
+      "Train loss: 0.007664, train accuracy:82.7%\n",
+      "Validation loss: 0.007162, validation accuracy:84.0%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -119,15 +119,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 160.90it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 152.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006893, train accuracy:84.3%\n",
-      "Validation loss: 0.007451, validation accuracy:82.9%\n",
+      "Train loss: 0.006982, train accuracy:84.1%\n",
+      "Validation loss: 0.006884, validation accuracy:84.7%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -138,15 +138,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:05<00:00, 134.65it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 161.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006539, train accuracy:85.0%\n",
-      "Validation loss: 0.006228, validation accuracy:85.9%\n",
+      "Train loss: 0.006576, train accuracy:85.1%\n",
+      "Validation loss: 0.006642, validation accuracy:84.8%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -157,15 +157,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:05<00:00, 149.09it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 151.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006257, train accuracy:85.6%\n",
-      "Validation loss: 0.006357, validation accuracy:85.6%\n",
+      "Train loss: 0.006297, train accuracy:85.5%\n",
+      "Validation loss: 0.006513, validation accuracy:85.4%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
      "text": [
       "\n",
       "***Evaluating***\n",
-      "Test loss: 0.006835, test accuracy: 84.3%\n"
+      "Test loss: 0.006899, test accuracy: 84.7%\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,12 +364,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate sample data in csv"
+    "### Generate sample data in csv for local mlflow prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,12 +386,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate sample data in json"
+    "### Generate sample data in json for local mlflow prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,6 +405,32 @@
     "\n",
     "    data_json = df.to_json(orient=\"split\")\n",
     "    with open(Path(TEST_IMAGE_DIR, \"predict_image.json\"), \"wt\", encoding=\"utf-8\") as file:\n",
+    "        file.write(data_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate sample data in json for Azure ML prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with Image.open(test_image_path) as image:\n",
+    "    x = np.asarray(image).reshape((1, -1)) / 255.0\n",
+    "\n",
+    "    column_names = [f\"col_{i}\" for i in range(x.shape[1])]\n",
+    "    df = DataFrame(data=x, columns=column_names)\n",
+    "\n",
+    "    data_json = '{\"input_data\":' + df.to_json(orient=\"split\") + '}'\n",
+    "    with open(Path(TEST_IMAGE_DIR, \"predict_image_azureml.json\"), \"wt\", encoding=\"utf-8\") as file:\n",
     "        file.write(data_json)"
    ]
   }
