--- a/aml-train-deploy/src/experiment.ipynb
+++ b/aml-train-deploy/src/experiment.ipynb
@@ -12,9 +12,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bstollnitz/miniconda3/envs/aml-train-deploy/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "26422272it [00:02, 10612408.93it/s]                              \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "29696it [00:00, 182102.16it/s]                          \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4422656it [00:01, 3430747.09it/s]                             \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "6144it [00:00, 4398328.00it/s]          "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "/home/bstollnitz/miniconda3/envs/aml-train-deploy/lib/python3.9/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554782469/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
+      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -26,7 +119,7 @@
        "Transform: ToTensor()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,15 +174,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:05<00:00, 126.38it/s]\n"
+      "100%|██████████| 750/750 [00:05<00:00, 147.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.010931, train accuracy:75.3%\n",
-      "Validation loss: 0.008346, validation accuracy:81.0%\n",
+      "Train loss: 0.010792, train accuracy:75.5%\n",
+      "Validation loss: 0.008504, validation accuracy:81.2%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -100,15 +193,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:06<00:00, 109.59it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 157.50it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007664, train accuracy:82.7%\n",
-      "Validation loss: 0.007162, validation accuracy:84.0%\n",
+      "Train loss: 0.007536, train accuracy:82.9%\n",
+      "Validation loss: 0.007055, validation accuracy:83.9%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -119,15 +212,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 152.65it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 170.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006982, train accuracy:84.1%\n",
-      "Validation loss: 0.006884, validation accuracy:84.7%\n",
+      "Train loss: 0.006946, train accuracy:84.3%\n",
+      "Validation loss: 0.006786, validation accuracy:84.8%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -138,15 +231,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 161.40it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 175.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006576, train accuracy:85.1%\n",
-      "Validation loss: 0.006642, validation accuracy:84.8%\n",
+      "Train loss: 0.006612, train accuracy:84.8%\n",
+      "Validation loss: 0.006386, validation accuracy:85.9%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -157,15 +250,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 151.98it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 181.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006297, train accuracy:85.5%\n",
-      "Validation loss: 0.006513, validation accuracy:85.4%\n",
+      "Train loss: 0.006346, train accuracy:85.4%\n",
+      "Validation loss: 0.006715, validation accuracy:85.3%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -185,7 +278,7 @@
     "from neural_network import NeuralNetwork\n",
     "from utils_train_nn import fit, evaluate\n",
     "\n",
-    "MODEL_DIR = \"../model\"\n",
+    "MODEL_DIR = \"../model_from_notebook\"\n",
     "\n",
     "def load_train_val_data(data_dir: str, batch_size: int, training_fraction: float\n",
     "    ) -> Tuple[DataLoader, DataLoader]:\n",
@@ -272,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +374,7 @@
      "text": [
       "\n",
       "***Evaluating***\n",
-      "Test loss: 0.006899, test accuracy: 84.7%\n"
+      "Test loss: 0.007317, test accuracy: 83.6%\n"
      ]
     }
    ],
@@ -319,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,10 +530,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "840bafce6ddc33855b1a9dbcfcf032674e17557112230697627421a94b2647b3"
+   "hash": "5280b5c56d5978e481a90dd1c940fde82dc1298abb28f15619db3ff97efbd54e"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('fashion-mnist-aml-basic')",
+   "display_name": "Python 3.9.5 ('aml-train-deploy')",
    "language": "python",
    "name": "python3"
   },
