Got training working in the cloud. Improved artifact saving code.

--- a/aml-train-deploy/src/experiment.ipynb
+++ b/aml-train-deploy/src/experiment.ipynb
@@ -12,102 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bstollnitz/miniconda3/envs/aml-train-deploy/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "26422272it [00:02, 10612408.93it/s]                              \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "29696it [00:00, 182102.16it/s]                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4422656it [00:01, 3430747.09it/s]                             \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "6144it [00:00, 4398328.00it/s]          "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Processing...\n",
-      "Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "/home/bstollnitz/miniconda3/envs/aml-train-deploy/lib/python3.9/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554782469/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
-      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -119,7 +26,7 @@
        "Transform: ToTensor()"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,15 +81,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:05<00:00, 147.98it/s]\n"
+      "100%|██████████| 750/750 [00:05<00:00, 135.62it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.010792, train accuracy:75.5%\n",
-      "Validation loss: 0.008504, validation accuracy:81.2%\n",
+      "Train loss: 0.010939, train accuracy:75.4%\n",
+      "Validation loss: 0.008344, validation accuracy:81.0%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -193,15 +100,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 157.50it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 161.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007536, train accuracy:82.9%\n",
-      "Validation loss: 0.007055, validation accuracy:83.9%\n",
+      "Train loss: 0.007578, train accuracy:82.9%\n",
+      "Validation loss: 0.006816, validation accuracy:84.3%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -212,15 +119,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 170.95it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 154.56it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006946, train accuracy:84.3%\n",
-      "Validation loss: 0.006786, validation accuracy:84.8%\n",
+      "Train loss: 0.006895, train accuracy:84.4%\n",
+      "Validation loss: 0.006245, validation accuracy:85.9%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -231,15 +138,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 175.75it/s]\n"
+      "100%|██████████| 750/750 [00:06<00:00, 118.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006612, train accuracy:84.8%\n",
-      "Validation loss: 0.006386, validation accuracy:85.9%\n",
+      "Train loss: 0.006480, train accuracy:85.2%\n",
+      "Validation loss: 0.006031, validation accuracy:86.2%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -250,19 +157,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 181.29it/s]\n"
+      "100%|██████████| 750/750 [00:06<00:00, 116.73it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006346, train accuracy:85.4%\n",
-      "Validation loss: 0.006715, validation accuracy:85.3%\n",
+      "Train loss: 0.006170, train accuracy:85.9%\n",
+      "Validation loss: 0.006108, validation accuracy:86.1%\n",
       "\n",
       "-------------------------------\n",
       "\n",
-      "Saving model to ../model/weights.pth\n"
+      "Saving model to ../model_from_notebook/weights.pth\n"
      ]
     }
    ],
@@ -365,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +281,7 @@
      "text": [
       "\n",
       "***Evaluating***\n",
-      "Test loss: 0.007317, test accuracy: 83.6%\n"
+      "Test loss: 0.006780, test accuracy: 84.9%\n"
      ]
     }
    ],
@@ -412,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
