--- a/aml-command/src/experiment.ipynb
+++ b/aml-command/src/experiment.ipynb
@@ -12,9 +12,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bstollnitz/miniconda3/envs/aml-command/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "26422272it [00:02, 9447304.48it/s]                               \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "29696it [00:00, 184651.18it/s]                          \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4422656it [00:01, 3380017.83it/s]                             \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "6144it [00:00, 9813329.69it/s]          "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
+      "\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "/home/bstollnitz/miniconda3/envs/aml-command/lib/python3.9/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554782469/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
+      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -26,7 +119,7 @@
        "Transform: ToTensor()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,15 +174,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:05<00:00, 135.62it/s]\n"
+      "100%|██████████| 750/750 [00:06<00:00, 120.49it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.010939, train accuracy:75.4%\n",
-      "Validation loss: 0.008344, validation accuracy:81.0%\n",
+      "Train loss: 0.010798, train accuracy:75.6%\n",
+      "Validation loss: 0.009171, validation accuracy:78.3%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -100,15 +193,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 161.18it/s]\n"
+      "100%|██████████| 750/750 [00:07<00:00, 96.68it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007578, train accuracy:82.9%\n",
-      "Validation loss: 0.006816, validation accuracy:84.3%\n",
+      "Train loss: 0.007627, train accuracy:82.8%\n",
+      "Validation loss: 0.007371, validation accuracy:83.0%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -119,15 +212,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 154.56it/s]\n"
+      "100%|██████████| 750/750 [00:06<00:00, 116.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006895, train accuracy:84.4%\n",
-      "Validation loss: 0.006245, validation accuracy:85.9%\n",
+      "Train loss: 0.006930, train accuracy:84.5%\n",
+      "Validation loss: 0.006717, validation accuracy:84.8%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -138,15 +231,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:06<00:00, 118.99it/s]\n"
+      "100%|██████████| 750/750 [00:07<00:00, 94.55it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006480, train accuracy:85.2%\n",
-      "Validation loss: 0.006031, validation accuracy:86.2%\n",
+      "Train loss: 0.006582, train accuracy:84.9%\n",
+      "Validation loss: 0.006877, validation accuracy:84.1%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -157,15 +250,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:06<00:00, 116.73it/s]\n"
+      "100%|██████████| 750/750 [00:05<00:00, 129.58it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006170, train accuracy:85.9%\n",
-      "Validation loss: 0.006108, validation accuracy:86.1%\n",
+      "Train loss: 0.006301, train accuracy:85.6%\n",
+      "Validation loss: 0.006359, validation accuracy:85.6%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -272,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +374,7 @@
      "text": [
       "\n",
       "***Evaluating***\n",
-      "Test loss: 0.006780, test accuracy: 84.9%\n"
+      "Test loss: 0.006785, test accuracy: 84.6%\n"
      ]
     }
    ],
@@ -319,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,10 +530,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5280b5c56d5978e481a90dd1c940fde82dc1298abb28f15619db3ff97efbd54e"
+   "hash": "dc71a06771360dda3ef34171ee01f3dac57b2c168380f15ad55d2438607d8ad0"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('aml-train-deploy')",
+   "display_name": "Python 3.9.5 ('aml-command')",
    "language": "python",
    "name": "python3"
   },
