--- a/aml-command/src/experiment.ipynb
+++ b/aml-command/src/experiment.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bstollnitz/miniconda3/envs/aml-command/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/opt/conda/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "26422272it [00:02, 9447304.48it/s]                               \n"
+      "26422272it [00:02, 10569750.49it/s]                              \n"
      ]
     },
     {
@@ -52,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "29696it [00:00, 184651.18it/s]                          \n"
+      "29696it [00:00, 192357.31it/s]                          \n"
      ]
     },
     {
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4422656it [00:01, 3380017.83it/s]                             \n"
+      "4422656it [00:01, 3463552.02it/s]                             \n"
      ]
     },
     {
@@ -86,7 +86,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6144it [00:00, 9813329.69it/s]          "
+      "6144it [00:00, 12700741.14it/s]         \n",
+      "/opt/conda/lib/python3.9/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554782469/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
+      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
      ]
     },
     {
@@ -97,15 +99,6 @@
       "\n",
       "Processing...\n",
       "Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "/home/bstollnitz/miniconda3/envs/aml-command/lib/python3.9/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554782469/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
-      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
      ]
     },
     {
@@ -174,15 +167,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:06<00:00, 120.49it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 178.68it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.010798, train accuracy:75.6%\n",
-      "Validation loss: 0.009171, validation accuracy:78.3%\n",
+      "Train loss: 0.011036, train accuracy:75.0%\n",
+      "Validation loss: 0.007947, validation accuracy:82.7%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -193,15 +186,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:07<00:00, 96.68it/s] \n"
+      "100%|██████████| 750/750 [00:03<00:00, 215.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007627, train accuracy:82.8%\n",
-      "Validation loss: 0.007371, validation accuracy:83.0%\n",
+      "Train loss: 0.007725, train accuracy:82.6%\n",
+      "Validation loss: 0.007149, validation accuracy:84.1%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -212,15 +205,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:06<00:00, 116.95it/s]\n"
+      "100%|██████████| 750/750 [00:03<00:00, 207.42it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006930, train accuracy:84.5%\n",
-      "Validation loss: 0.006717, validation accuracy:84.8%\n",
+      "Train loss: 0.007135, train accuracy:83.7%\n",
+      "Validation loss: 0.006546, validation accuracy:85.5%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -231,15 +224,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:07<00:00, 94.55it/s] \n"
+      "100%|██████████| 750/750 [00:03<00:00, 199.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006582, train accuracy:84.9%\n",
-      "Validation loss: 0.006877, validation accuracy:84.1%\n",
+      "Train loss: 0.006762, train accuracy:84.5%\n",
+      "Validation loss: 0.006300, validation accuracy:86.0%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -250,15 +243,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:05<00:00, 129.58it/s]\n"
+      "100%|██████████| 750/750 [00:04<00:00, 184.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006301, train accuracy:85.6%\n",
-      "Validation loss: 0.006359, validation accuracy:85.6%\n",
+      "Train loss: 0.006524, train accuracy:85.0%\n",
+      "Validation loss: 0.006210, validation accuracy:85.8%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -374,7 +367,7 @@
      "text": [
       "\n",
       "***Evaluating***\n",
-      "Test loss: 0.006785, test accuracy: 84.6%\n"
+      "Test loss: 0.006716, test accuracy: 84.7%\n"
      ]
     }
    ],
@@ -510,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,10 +523,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "dc71a06771360dda3ef34171ee01f3dac57b2c168380f15ad55d2438607d8ad0"
+   "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('aml-command')",
+   "display_name": "Python 3.10.4 ('base')",
    "language": "python",
    "name": "python3"
   },
