Updated package versions. Swiched to GPU.

--- a/aml-command-artifact/src/experiment.ipynb
+++ b/aml-command-artifact/src/experiment.ipynb
@@ -12,95 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "26422272it [00:02, 10569750.49it/s]                              \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "29696it [00:00, 192357.31it/s]                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4422656it [00:01, 3463552.02it/s]                             \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "6144it [00:00, 12700741.14it/s]         \n",
-      "/opt/conda/lib/python3.9/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554782469/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
-      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
-      "\n",
-      "Processing...\n",
-      "Done!\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -112,7 +26,7 @@
        "Transform: ToTensor()"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +81,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 178.68it/s]\n"
+      "100%|██████████| 750/750 [00:09<00:00, 77.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.011036, train accuracy:75.0%\n",
-      "Validation loss: 0.007947, validation accuracy:82.7%\n",
+      "Train loss: 0.010750, train accuracy:76.0%\n",
+      "Validation loss: 0.009128, validation accuracy:80.2%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -186,15 +100,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:03<00:00, 215.45it/s]\n"
+      "100%|██████████| 750/750 [00:08<00:00, 87.32it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007725, train accuracy:82.6%\n",
-      "Validation loss: 0.007149, validation accuracy:84.1%\n",
+      "Train loss: 0.007598, train accuracy:82.7%\n",
+      "Validation loss: 0.007688, validation accuracy:82.6%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -205,15 +119,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:03<00:00, 207.42it/s]\n"
+      "100%|██████████| 750/750 [00:08<00:00, 87.05it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.007135, train accuracy:83.7%\n",
-      "Validation loss: 0.006546, validation accuracy:85.5%\n",
+      "Train loss: 0.006882, train accuracy:84.3%\n",
+      "Validation loss: 0.006897, validation accuracy:84.7%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -224,15 +138,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:03<00:00, 199.84it/s]\n"
+      "100%|██████████| 750/750 [00:08<00:00, 87.12it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006762, train accuracy:84.5%\n",
-      "Validation loss: 0.006300, validation accuracy:86.0%\n",
+      "Train loss: 0.006500, train accuracy:85.2%\n",
+      "Validation loss: 0.006583, validation accuracy:85.2%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -243,15 +157,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:04<00:00, 184.79it/s]\n"
+      "100%|██████████| 750/750 [00:09<00:00, 81.37it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.006524, train accuracy:85.0%\n",
-      "Validation loss: 0.006210, validation accuracy:85.8%\n",
+      "Train loss: 0.006248, train accuracy:85.6%\n",
+      "Validation loss: 0.006146, validation accuracy:85.8%\n",
       "\n",
       "-------------------------------\n",
       "\n",
@@ -358,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +281,7 @@
      "text": [
       "\n",
       "***Evaluating***\n",
-      "Test loss: 0.006716, test accuracy: 84.7%\n"
+      "Test loss: 0.006614, test accuracy: 84.9%\n"
      ]
     }
    ],
@@ -405,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,10 +437,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+   "hash": "21cf61e7ca590a5c2f3f11c983d74248c1bd61511e7105e8d6f47e3cdb62c23d"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('base')",
+   "display_name": "Python 3.9.5 ('aml-command-artifact')",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
